--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,85 +14,29 @@
       "871365   1454653822849011713       42682         2219        13137   \n",
       "2218350  1484230264293318663      192137        10642        12575   \n",
       "1639231  1474743503393628164       11027          243        17238   \n",
-      "4290576  1365627753161101314       85404          788          278   \n",
-      "3895838  1433903448215408646      238764         1564          472   \n",
-      "3489472  1472024065720274945       12544          230        10762   \n",
       "765175   1459164143626424321       33156         5759         8598   \n",
-      "4570686  1496226418782572548       14519           64         6562   \n",
       "2116372  1486482496883625984       20161         7196         7281   \n",
-      "3829653  1444713967167889410       84780          958          349   \n",
-      "3719300  1454757214598615043       17123           34         1433   \n",
-      "4047193  1409793988605865985       56203          412          124   \n",
-      "2064720  1487399561266020355        2452            8         6547   \n",
-      "3742904  1452821173813661696       10545          860         7869   \n",
-      "4262836  1370629926081032194       55297          427          115   \n",
+      "...                      ...         ...          ...          ...   \n",
+      "2070201  1487274305624973317        1305           32         1173   \n",
+      "3539470  1468247323436322824        1089          137         1313   \n",
+      "4737085  1490742993841758215       12530           65          994   \n",
+      "225084   1473715610886582278         925          649          704   \n",
+      "2869758  1434911045231857665        2335            7           35   \n",
       "\n",
       "         retweet_count  punteggio_totale  \n",
-      "871365           76411          7.732704  \n",
-      "2218350          13270          3.500983  \n",
-      "1639231           3075          2.264291  \n",
-      "4290576          26837          2.213615  \n",
-      "3895838          24527          2.127654  \n",
-      "3489472          10620          2.104161  \n",
-      "765175            5257          1.951515  \n",
-      "4570686          14437          1.900988  \n",
-      "2116372           2905          1.749059  \n",
-      "3829653          19922          1.694842  \n",
-      "3719300          19182          1.675678  \n",
-      "4047193          19834          1.610521  \n",
-      "2064720          10652          1.596777  \n",
-      "3742904           7669          1.595986  \n",
-      "4262836          19351          1.572960  \n",
-      "                    tweet_id           created_at            author_id  \\\n",
-      "871365   1454653822849011713  2021-10-31 03:37:52   952087880918228992   \n",
-      "2218350  1484230264293318663  2022-01-20 18:24:05            158487331   \n",
-      "1639231  1474743503393628164  2021-12-25 14:07:05              5768872   \n",
-      "4290576  1365627753161101314  2021-02-27 11:40:03  1114005761472884741   \n",
-      "3895838  1433903448215408646  2021-09-03 21:23:17  1255367447575777283   \n",
-      "3489472  1472024065720274945  2021-12-18 02:01:00  1427759853498298369   \n",
-      "765175   1459164143626424321  2021-11-12 14:20:16             15485441   \n",
-      "4570686  1496226418782572548  2022-02-22 20:52:31  1424652360442286095   \n",
-      "2116372  1486482496883625984  2022-01-26 23:33:39            285282053   \n",
-      "3829653  1444713967167889410  2021-10-03 17:20:25           4033772715   \n",
-      "3719300  1454757214598615043  2021-10-31 10:28:42           1353833377   \n",
-      "4047193  1409793988605865985  2021-06-29 08:40:54  1114005761472884741   \n",
-      "2064720  1487399561266020355  2022-01-29 12:17:44  1461324154381103112   \n",
-      "3742904  1452821173813661696  2021-10-26 02:15:34  1405701429646430212   \n",
-      "4262836  1370629926081032194  2021-03-13 06:56:54  1114005761472884741   \n",
+      "871365           76411          5.882075  \n",
+      "2218350          13270          5.514192  \n",
+      "1639231           3075          3.212580  \n",
+      "765175            5257          2.923923  \n",
+      "2116372           2905          2.818013  \n",
+      "...                ...               ...  \n",
+      "2070201           1219          0.263481  \n",
+      "3539470            111          0.263173  \n",
+      "4737085            631          0.262458  \n",
+      "225084             351          0.262144  \n",
+      "2869758           6238          0.262099  \n",
       "\n",
-      "                                                   content  retweet_count  \\\n",
-      "871365   🎃 MY BIGGEST GIVEAWAY YET 🎃\\n\\n A Mutant Ape f...          76411   \n",
-      "2218350  I am an ape! #community #art #BoredApeYC https...          13270   \n",
-      "1639231  time to give away some NFTS ...pls reply with ...           3075   \n",
-      "4290576    🐰 bunny koo doodles ^_^ https://t.co/g6k5N1bTkO          26837   \n",
-      "3895838  guys… my teacher tried to draw my doodles when...          24527   \n",
-      "3489472  We’ve teamed up with the Doodles team to give ...          10620   \n",
-      "765175   Permission to come a bored? @BoredApeYC #NewPr...           5257   \n",
-      "4570686  @Imaginary_Ones x @TripstersNFT\\n\\nI'm droppin...          14437   \n",
-      "2116372  Joined @BoredApeYC ready for the reveal? Thank...           2905   \n",
-      "3829653      percy jackson doodles https://t.co/F5lDpofzvg          19922   \n",
-      "3719300  To help change someone’s life and celebrate th...          19182   \n",
-      "4047193  210629 BTS LIVE DOODLES !! 🌟💗 https://t.co/TVe...          19834   \n",
-      "2064720  $200 | 2.800.000 IDR IN 24 HRS 🦄\\n\\n- $100 👉🏻 ...          10652   \n",
-      "3742904  50k+ @Twitter followers 🚀😛🌈\\n\\nlet's celebrate...           7669   \n",
-      "4262836  🥗 JINMINJOON DOODLES !! ^_^ https://t.co/QojNc...          19351   \n",
-      "\n",
-      "         reply_count  like_count  quote_count  punteggio_totale  \n",
-      "871365         13137       42682         2219          7.732704  \n",
-      "2218350        12575      192137        10642          3.500983  \n",
-      "1639231        17238       11027          243          2.264291  \n",
-      "4290576          278       85404          788          2.213615  \n",
-      "3895838          472      238764         1564          2.127654  \n",
-      "3489472        10762       12544          230          2.104161  \n",
-      "765175          8598       33156         5759          1.951515  \n",
-      "4570686         6562       14519           64          1.900988  \n",
-      "2116372         7281       20161         7196          1.749059  \n",
-      "3829653          349       84780          958          1.694842  \n",
-      "3719300         1433       17123           34          1.675678  \n",
-      "4047193          124       56203          412          1.610521  \n",
-      "2064720         6547        2452            8          1.596777  \n",
-      "3742904         7869       10545          860          1.595986  \n",
-      "4262836          115       55297          427          1.572960  \n"
+      "[400 rows x 6 columns]\n"
      ]
     }
    ],
@@ -114,29 +58,84 @@
     "scaler = MinMaxScaler()\n",
     "tweet_features = scaler.fit_transform(tweets_df[['like_count', 'quote_count', 'reply_count', 'retweet_count']])\n",
     "\n",
-    "# Calcola il punteggio totale per ciascun tweet (0, 1)\n",
+    "# Calcola il punteggio totale per ciascun tweet\n",
     "tweets_df['punteggio_totale'] = (\n",
-    "    tweet_features[:, 1] * peso_like +\n",
-    "    tweet_features[:, 2] * peso_reply +\n",
-    "    tweet_features[:, 3] * peso_retweet +\n",
+    "    tweet_features[:, 0] * peso_like + \n",
+    "    tweet_features[:, 1] * peso_reply + \n",
+    "    tweet_features[:, 2] * peso_retweet + \n",
     "    tweet_features[:, 3] * peso_quote \n",
     ")\n",
     "\n",
     "# Ordina il DataFrame in base al punteggio totale in ordine decrescente (più influenti)\n",
     "tweets_df_sorted_desc = tweets_df.sort_values(by='punteggio_totale', ascending=False)\n",
     "\n",
-    "# Ordina il DataFrame in base al punteggio totale in ordine crescente (meno influenti)\n",
-    "tweets_df_sorted_asc = tweets_df.sort_values(by='punteggio_totale', ascending=True)\n",
-    "\n",
     "# Seleziona i primi n tweet più influenti\n",
-    "n = 15\n",
+    "n = 400\n",
     "top_tweets = tweets_df_sorted_desc.head(n)\n",
     "\n",
     "# Stampa i tweet più influenti\n",
     "print(\"Tweet più influenti:\")\n",
     "print(top_tweets[['tweet_id', 'like_count', 'quote_count', 'reply_count', 'retweet_count', 'punteggio_totale']])\n",
     "\n",
-    "print(top_tweets)\n"
+    "#print(top_tweets)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentiment Analysis dei tweet:\n",
+      "                    tweet_id  \\\n",
+      "0        1471266741087055872   \n",
+      "1        1471262376796336128   \n",
+      "2        1471262187633135617   \n",
+      "3        1471261469278834688   \n",
+      "4        1471261026050093059   \n",
+      "...                      ...   \n",
+      "4792259  1496333455000768517   \n",
+      "4792260  1496332316079431680   \n",
+      "4792261  1496326805380345857   \n",
+      "4792262  1496309759972048896   \n",
+      "4792263  1496295005874446344   \n",
+      "\n",
+      "                                                   content  sentiment_polarity  \n",
+      "0            The Hashies are here. https://t.co/bkkspANbaH            0.000000  \n",
+      "1        #HashMasks 12279 changed name to: \"CatinaBot\" ...            0.000000  \n",
+      "2        Hashmask #8270 - “Unnamed” was purchased by ht...            0.133333  \n",
+      "3        His name is Atom. Can we get him a fight?\\n- R...            0.200000  \n",
+      "4        @mskDAO #NameYourHashmask \\nFree speech now an...            0.400000  \n",
+      "...                                                    ...                 ...  \n",
+      "4792259  @NftTrader @Animetas1 @TheHashmasks @coolcatsn...            0.325000  \n",
+      "4792260  Salad🥗Swaps are one of the more popular trades...            0.550000  \n",
+      "4792261  @CryptoGodJohn @metasaurs @TheHashmasks @Women...            0.575000  \n",
+      "4792262  Hashmasks Looking to Expand into the Metaverse...            0.000000  \n",
+      "4792263  @zenfrogalliance @candevsdosmtng this smell li...            0.300000  \n",
+      "\n",
+      "[4792264 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from textblob import TextBlob\n",
+    "\n",
+    "# Funzione per l'analisi del sentiment\n",
+    "def analyze_sentiment(text):\n",
+    "    # Crea un oggetto TextBlob dal testo del tweet\n",
+    "    blob = TextBlob(text)\n",
+    "    # Restituisce la polarità del sentiment\n",
+    "    return blob.sentiment.polarity\n",
+    "\n",
+    "# Applica la funzione di analisi del sentiment al contenuto dei tweet\n",
+    "tweets_df['sentiment_polarity'] = tweets_df['content'].apply(analyze_sentiment)\n",
+    "\n",
+    "# Stampa i tweet con la polarità del sentiment\n",
+    "print(\"Sentiment Analysis dei tweet:\")\n",
+    "print(tweets_df[['tweet_id', 'content', 'sentiment_polarity']])"
    ]
   }
  ],
