--- a/tweet_SA.ipynb
+++ b/tweet_SA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -28,6 +28,7 @@
     "import mplcursors\n",
     "import plotly.express as px\n",
     "from datetime import datetime\n",
+    "import re\n",
     "\n",
     "#NLP libraries \n",
     "import nltk\n",
@@ -714,7 +715,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### FILTRARE GLI HASHTAG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### estrazione degli hashtag dai tweet filtrati e confrontarli con la lista degli hashtag di interesse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funzione per estrarre gli hashtag dal testo del tweet utilizzando espressioni regolari\n",
+    "def extract_hashtags(text):\n",
+    "    return re.findall(r'#(\\w+)', text)\n",
+    "\n",
+    "# Estrai gli hashtag dai tweet filtrati\n",
+    "tweets_df_final['tweet_hashtags'] = tweets_df_final['content'].apply(extract_hashtags)\n",
+    "\n",
+    "# Confronta con la lista degli hashtag di interesse\n",
+    "desired_hashtags = [\"nft\", \"cryptopunks\", \"bayc\", \"nfts\", \"nftcommunity\", \"nftart\", \"nftcollector\", \"opensea\", \"ethereum\", \"cryptopunk\"]\n",
+    "\n",
+    "tweets_with_desired_hashtags = tweets_df_final[tweets_df_final['tweet_hashtags'].apply(lambda hashtags: any(hashtag.lower() in desired_hashtags for hashtag in hashtags))]\n",
+    "\n",
+    "# Ora puoi eseguire ulteriori analisi sui tweet che contengono gli hashtag desiderati"
+   ]
   },
   {
    "cell_type": "markdown",
