Salvataggio dataframes nella cartella "dataframes"

--- a/tweet_SA.ipynb
+++ b/tweet_SA.ipynb
@@ -2395,6 +2395,34 @@
     "# Mostra il grafico\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Salvataggio dataframe per confrontare picchi dei tweet e degli nft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Percorso della cartella \"datasets\"\n",
+    "datasets_path = '../datasets/'\n",
+    "\n",
+    "# Percorso della cartella \"dataframes\"\n",
+    "dataframes_path = '../dataframes'\n",
+    "\n",
+    "# Creazione della cartella 'dataframes' se non esiste\n",
+    "os.makedirs(dataframes_path, exist_ok=True)\n",
+    "\n",
+    "# Salvataggio del dataframe df_tweets_sentiment_period in un file CSV nella cartella 'dataframes'\n",
+    "df_tweets_sentiment_period.to_csv(os.path.join(dataframes_path, 'tweets_sentiment_df.csv'), index=False)"
+   ]
   }
  ],
  "metadata": {
