--- a/opinion_leader.ipynb
+++ b/opinion_leader.ipynb
@@ -28,12 +28,14 @@
    "source": [
     "tweet_users = pd.read_csv(\"../datasets/twitter/twitter_users.csv\")\n",
     "tweet_collection = pd.read_csv(\"../datasets/twitter/twitter_tweet_collection.csv\")\n",
-    "tweets_picco_0_neg_tid_9032 = pd.read_csv(\"../dataframes/tweets_filtrati_picco_0_negativo_token_9032.csv\")\n",
-    "tweets_picco_1_tid_6563 = pd.read_csv(\"../dataframes/tweets_filtrati_picco_0_token_6563.csv\")\n",
-    "tweets_picco_2_tid_4037= pd.read_csv(\"../dataframes/tweets_filtrati_picco_1_token_4037.csv\")\n",
-    "tweets_picco_3_tid_12247 = pd.read_csv(\"../dataframes/tweets_filtrati_picco_2_token_12247.csv\")\n",
-    "tweets_picco_4_tid_9728 = pd.read_csv(\"../dataframes/tweets_filtrati_picco_4_token_4704.csv\")\n",
-    "tweets_picco_4_tid_8898 = pd.read_csv(\"../dataframes/tweets_filtrati_picco_3_token_8898.csv\")"
+    "# Importazione picco negativo\n",
+    "tweets_picco_0_neg = pd.read_csv(\"../dataframes/tweets_filtrati_picco_0_negativo_token_9032.csv\")\n",
+    "# Importazione picchi positivi\n",
+    "tweets_picco_0_pos = pd.read_csv(\"../dataframes/tweets_filtrati_picco_0_token_6563.csv\")\n",
+    "tweets_picco_1_pos= pd.read_csv(\"../dataframes/tweets_filtrati_picco_1_token_4037.csv\")\n",
+    "tweets_picco_2_pos = pd.read_csv(\"../dataframes/tweets_filtrati_picco_2_token_12247.csv\")\n",
+    "tweets_picco_3_pos = pd.read_csv(\"../dataframes/tweets_filtrati_picco_4_token_4704.csv\")\n",
+    "tweets_picco_4_pos = pd.read_csv(\"../dataframes/tweets_filtrati_picco_3_token_8898.csv\")"
    ]
   },
   {
@@ -49,22 +51,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_data_neg_0_description = pd.merge(tweets_picco_0_neg_tid_9032, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
+    "merge_data_neg_0_description = pd.merge(tweets_picco_0_neg, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
     "merge_neg_9032 = pd.merge(merge_data_neg_0_description, tweet_collection, left_on='tweet_id', right_on='tweet_id')\n",
     "\n",
-    "merge_data_0_description = pd.merge(tweets_picco_1_tid_6563, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
+    "merge_data_0_description = pd.merge(tweets_picco_0_pos, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
     "merge_6563 = pd.merge(merge_data_0_description, tweet_collection, left_on='tweet_id', right_on='tweet_id')\n",
     "\n",
-    "merge_data_1_description = pd.merge(tweets_picco_2_tid_4037, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
+    "merge_data_1_description = pd.merge(tweets_picco_1_pos, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
     "merge_4037 = pd.merge(merge_data_1_description, tweet_collection, left_on='tweet_id', right_on='tweet_id')\n",
     "\n",
-    "merge_data_2_description = pd.merge(tweets_picco_3_tid_12247, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
+    "merge_data_2_description = pd.merge(tweets_picco_2_pos, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
     "merge_12247 = pd.merge(merge_data_2_description, tweet_collection, left_on='tweet_id', right_on='tweet_id')\n",
     "\n",
-    "merge_data_3_description = pd.merge(tweets_picco_4_tid_9728, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
+    "merge_data_3_description = pd.merge(tweets_picco_3_pos, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
     "merge_9728 = pd.merge(merge_data_3_description, tweet_collection, left_on='tweet_id', right_on='tweet_id')\n",
     "\n",
-    "merge_data_4_description = pd.merge(tweets_picco_4_tid_8898, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
+    "merge_data_4_description = pd.merge(tweets_picco_4_pos, tweet_users, left_on='author_id', right_on='user_id').drop(columns=['user_id'])\n",
     "merge_8898 = pd.merge(merge_data_4_description, tweet_collection, left_on='tweet_id', right_on='tweet_id')"
    ]
   },
