--- a/opinion_leader.ipynb
+++ b/opinion_leader.ipynb
@@ -139,7 +139,7 @@
     "    cluster_labels = kmeans.fit_predict(X)\n",
     "    silhouette_avg = silhouette_score(X, cluster_labels)\n",
     "    silhouette_scores.append(silhouette_avg)\n",
-    "    print(f\"For n_clusters = {k}, the average silhouette_score is : {silhouette_avg}\")\n",
+    "    print(f\"Per n_clusters = {k}, la media silhouette_score è: {silhouette_avg}\")\n",
     "\n",
     "# Trova il valore di k che massimizza il punteggio di Silhouette\n",
     "best_k = silhouette_scores.index(max(silhouette_scores)) + 2  # Indice del massimo + 2 per ottenere il valore reale di k\n",
@@ -292,7 +292,7 @@
     "    cluster_labels = kmeans.fit_predict(X)\n",
     "    silhouette_avg = silhouette_score(X, cluster_labels)\n",
     "    silhouette_scores.append(silhouette_avg)\n",
-    "    print(f\"For n_clusters = {k}, the average silhouette_score is : {silhouette_avg}\")\n",
+    "    print(f\"Per n_clusters = {k}, la media silhouette_score è: {silhouette_avg}\")\n",
     "\n",
     "# Trova il valore di k che massimizza il punteggio di Silhouette\n",
     "best_k = silhouette_scores.index(max(silhouette_scores)) + 2  # Indice del massimo + 2 per ottenere il valore reale di k\n",
@@ -414,7 +414,7 @@
     "    cluster_labels = kmeans.fit_predict(X)\n",
     "    silhouette_avg = silhouette_score(X, cluster_labels)\n",
     "    silhouette_scores.append(silhouette_avg)\n",
-    "    print(f\"For n_clusters = {k}, the average silhouette_score is : {silhouette_avg}\")\n",
+    "    print(f\"Per n_clusters = {k}, la media silhouette_score è: {silhouette_avg}\")\n",
     "\n",
     "# Trova il valore di k che massimizza il punteggio di Silhouette\n",
     "best_k = silhouette_scores.index(max(silhouette_scores)) + 2  # Indice del massimo + 2 per ottenere il valore reale di k\n",
@@ -602,7 +602,7 @@
     "    cluster_labels = kmeans.fit_predict(X)\n",
     "    silhouette_avg = silhouette_score(X, cluster_labels)\n",
     "    silhouette_scores.append(silhouette_avg)\n",
-    "    print(f\"For n_clusters = {k}, the average silhouette_score is : {silhouette_avg}\")\n",
+    "    print(f\"Per n_clusters = {k}, la media silhouette_score è: {silhouette_avg}\")\n",
     "\n",
     "# Trova il valore di k che massimizza il punteggio di Silhouette\n",
     "best_k = silhouette_scores.index(max(silhouette_scores)) + 2  # Indice del massimo + 2 per ottenere il valore reale di k\n",
@@ -732,7 +732,7 @@
     "    cluster_labels = kmeans.fit_predict(X)\n",
     "    silhouette_avg = silhouette_score(X, cluster_labels)\n",
     "    silhouette_scores.append(silhouette_avg)\n",
-    "    print(f\"For n_clusters = {k}, the average silhouette_score is : {silhouette_avg}\")\n",
+    "    print(f\"Per n_clusters = {k}, la media silhouette_score è: {silhouette_avg}\")\n",
     "\n",
     "# Trova il valore di k che massimizza il punteggio di Silhouette\n",
     "best_k = silhouette_scores.index(max(silhouette_scores)) + 2  # Indice del massimo + 2 per ottenere il valore reale di k\n",
@@ -914,7 +914,7 @@
     "    cluster_labels = kmeans.fit_predict(X)\n",
     "    silhouette_avg = silhouette_score(X, cluster_labels)\n",
     "    silhouette_scores.append(silhouette_avg)\n",
-    "    print(f\"For n_clusters = {k}, the average silhouette_score is : {silhouette_avg}\")\n",
+    "    print(f\"Per n_clusters = {k}, la media silhouette_score è: {silhouette_avg}\")\n",
     "\n",
     "# Trova il valore di k che massimizza il punteggio di Silhouette\n",
     "best_k = silhouette_scores.index(max(silhouette_scores)) + 2  # Indice del massimo + 2 per ottenere il valore reale di k\n",
